# AgentTrace

./: .agenttrace.json.example  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml  verify_properties.py
agenttrace/: __init__.py  cli.py  config.py  core.py  injection.py  retrieval.py
agenttrace/embeddings/: anthropic.py  base.py  local.py  openai.py
agenttrace/storage/: base.py  jsonl.py  sqlite.py
demo/: README.md  agent_demo.py  demo_traces.jsonl
examples/: python_api_example.py
examples/claude_code/: example_session.md
skill/: SKILL.md
tests/: test_cli.py  test_config.py  test_core.py  test_embeddings.py  test_injection.py  test_retrieval.py  test_storage_jsonl.py  test_storage_sqlite.py
