[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttrace"
version = "0.1.0"
description = "Reasoning memory for AI agents. Save what worked. Recall it next time."
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers",
    "click>=8.0",
    "numpy",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["voyageai"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
agenttrace = "agenttrace.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["agenttrace*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
